added comment functionality

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 
 		<script src="app.js"></script>
 	</head>
-	<body ng-app="eddieTimes" ng-controller="mainController">
+	<body ng-app="eddieTimes">
 		
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
+				<div class="page-header">
+					<h1>Eddie Times</h1>
+				</div>
 				<ui-view><ui-view>
 			</div>
 		</div>
