plumbing for local test api

--- a/pages/home.htm
+++ b/pages/home.htm
@@ -32,3 +32,5 @@
    </div>
    <button type="submit" class="btn btn-primary">Post</button>
  </form>
+
+ <button class='btn btn-primary' ng-click='loadPosts()'>Load Posts</button>
