--- a/index.html
+++ b/index.html
@@ -1,24 +1,46 @@
-<html>
-	<head>
-		<title>EddieTimes</title>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<!DOCTYPE html>
+<html lang="en-us" ng-app="eddieTimesApp">
+    <head>
+        <title>EddieTimes</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+        <meta charset="UTF-8">
 
-		<script src="https://code.angularjs.org/1.5.5/angular.min.js"></script>
-		    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.min.js"></script>
+        <!-- load bootstrap and fontawesome via CDN -->
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+        <style>
+            html, body, input, select, textarea
+            {
+                font-size: 1.05em !important;
+            }
+        </style>
+        
+        <!-- load angular via CDN -->
+        <script src="//code.angularjs.org/1.3.0-rc.2/angular.min.js"></script>
+        <script src="//code.angularjs.org/1.3.0-rc.2/angular-route.min.js"></script>
+        <script src="//code.angularjs.org/1.3.0-rc.2/angular-resource.min.js"></script>
+        <script src="app.js"></script>
+    </head>
+    <body>
 
-		<script src="app.js"></script>
-	</head>
-	<body ng-app="eddieTimes">
-		
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<div class="page-header">
-					<h1>Eddie Times</h1>
+        <header>
+			<nav class="navbar navbar-default">
+			<div class="container">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="/">Eddie Times</a>
 				</div>
-				<ui-view><ui-view>
+
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+				</ul>
 			</div>
+			</nav>
+		</header>
+
+        <div class="container">
+
+            <div ng-view></div>
+
 		</div>
 
-	</body>
+    </body>
 </html>
-
