--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <script src="//code.angularjs.org/1.3.0-rc.2/angular-route.min.js"></script>
         <script src="//code.angularjs.org/1.3.0-rc.2/angular-resource.min.js"></script>
         <script src="app.js"></script>
+        <script src="config/routes.js"></script>
+        <script src="controllers/controllers.js"></script>
+        <script src="services/factories.js"></script>
     </head>
     <body>
 
@@ -38,7 +41,7 @@
 
         <div class="container">
 
-            <div ng-view></div>
+            <div ng-view class="ng-scope"></div>
 
 		</div>
 
